--- a/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8953-regulator.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -17,11 +17,9 @@
 	rpm-regulator-smpa1 {
 		status = "okay";
 		pm8953_s1: regulator-s1 {
-			regulator-min-microvolt =
-					<RPM_SMD_REGULATOR_LEVEL_RETENTION>;
-			regulator-max-microvolt =
-					<RPM_SMD_REGULATOR_LEVEL_TURBO>;
-			qcom,use-voltage-level;
+			regulator-min-microvolt = <870000>;
+			regulator-max-microvolt = <1156000>;
+			qcom,init-voltage = <1000000>;
 			status = "okay";
 		};
 	};
@@ -61,14 +59,6 @@
 			regulator-max-microvolt =
 					<RPM_SMD_REGULATOR_LEVEL_TURBO>;
 			qcom,use-voltage-level;
-		};
-
-		cx_cdev: regulator-cx-cdev {
-			compatible = "qcom,regulator-cooling-device";
-			regulator-cdev-supply = <&pm8953_s2_floor_level>;
-			regulator-levels = <RPM_SMD_REGULATOR_LEVEL_NOM
-					RPM_SMD_REGULATOR_LEVEL_RETENTION>;
-			#cooling-cells = <2>;
 		};
 	};
 
@@ -335,7 +325,7 @@
 };
 
 &soc {
-	apc_mem_acc_vreg: regulator@19461d4 {
+	apc_mem_acc_vreg: regulator@019461d4 {
 		compatible = "qcom,mem-acc-regulator";
 		reg = <0x019461d4 0x4>, <0x019461d8 0x4>;
 		reg-names = "acc-sel-l1", "acc-sel-l2";
@@ -401,13 +391,13 @@
 			apc_vreg: regulator {
 				regulator-name = "apc_corner";
 				regulator-min-microvolt = <1>;
-				regulator-max-microvolt = <9>;
+				regulator-max-microvolt = <13>;
 
 				qcom,cpr-fuse-corners = <4>;
 				qcom,cpr-fuse-combos = <64>;
 				qcom,cpr-speed-bins = <8>;
 				qcom,cpr-speed-bin-corners =
-					<9 0 7 0 0 0 7 9>;
+					<9 0 13 0 0 0 7 9>;
 				qcom,cpr-corners =
 					/* Speed bin 0 */
 					<9 9 9 9 9 9 9 9>,
@@ -416,7 +406,7 @@
 					<0 0 0 0 0 0 0 0>,
 
 					/* Speed bin 2 */
-					<7 7 7 7 7 7 7 7>,
+					<13 13 13 13 13 13 13 13>,
 
 					/* Speed bin 3..5 */
 					<0 0 0 0 0 0 0 0>,
@@ -437,7 +427,7 @@
 					<0 0 0 0>,
 
 					/* Speed bin 2 */
-					<1 2 4 7>,
+					<1 2 4 13>,
 
 					/* Speed bin 3..5 */
 					<0 0 0 0>,
@@ -452,20 +442,21 @@
 
 				qcom,cpr-voltage-ceiling =
 					/* Speed bin 0 */
-					<715000  790000 860000 865000 920000
-					 990000 1065000 1065000 1065000>,
+					<700000  775000 860000 845000 905000
+					 975000 1050000 1050000 1050000>,
 
 					/* Speed bin 2 */
-					<715000  790000 860000 865000 920000
-					 990000 1065000>,
+					<700000  775000 860000 845000 905000
+					 975000 1050000 1050000 1050000 1060000
+					 1075000 1085000 1096000>,
 
 					/* Speed bin 6 */
-					<715000  790000 860000 865000 920000
-					 990000 1065000>,
+					<700000  775000 860000 845000 905000
+					 975000 1050000>,
 
 					/* Speed bin 7 */
-					<715000  790000 860000 865000 920000
-					 990000 1065000 1065000 1065000>;
+					<700000  775000 860000 845000 905000
+					 975000 1050000 1050000 1050000>;
 
 				qcom,cpr-voltage-floor =
 					/* Speed bin 0 */
@@ -474,7 +465,8 @@
 
 					/* Speed bin 2 */
 					<500000  500000 500000 500000 500000
-					 500000  500000>,
+					 500000  500000 500000 500000 500000
+					 500000  500000 500000>,
 
 					/* Speed bin 6 */
 					<500000  500000 500000 500000 500000
@@ -505,21 +497,29 @@
 
 					/* Speed bin 2; CPR rev 0..7 */
 					 <    0     0     0     0     0
-					      0     0>,
+					      0     0     0     0     0
+						  0     0     0>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 					 <50000 50000 50000 50000 50000
-					  50000 50000>,
+					  50000 50000 50000 50000 50000
+					  50000 50000 50000>,
 
 					/* Speed bin 6; CPR rev 0..7 */
 					 <    0     0     0     0     0
@@ -566,9 +566,11 @@
 
 					/* Speed bin 2; misc fuse 0..1 */
 					<    0     0     0     0      0
-					     0     0>,
+					     0     0     0     0      0
+						 0     0     0>,
 					<    0     0 30000     0      0
-					     0     0>,
+					     0     0     0     0      0
+						 0     0     0>,
 
 					/* Speed bin 6; misc fuse 0..1 */
 					<    0     0     0     0      0
@@ -587,7 +589,7 @@
 					<1 1 2 2 2 2 2 2 2>,
 
 					/* Speed bin 2 */
-					<1 1 2 2 2 2 2>,
+					<1 1 2 2 2 2 2 2 2 2 2 2 2>,
 
 					/* Speed bin 6 */
 					<1 1 2 2 2 2 2>,
@@ -604,7 +606,9 @@
 					/* Speed bin 2 */
 					<652800000 1036800000 1401600000
 					1689600000 1804800000 1958400000
-					2016000000>,
+					2016000000 2150400000 2208000000
+					2409000000 2616000000 2958400000
+					3150400000>,
 
 					/* Speed bin 6 */
 					<652800000 1036800000 1401600000
@@ -819,7 +823,7 @@
 		};
 	};
 
-	gfx_mem_acc: regulator@194415c {
+	gfx_mem_acc: regulator@0194415c {
 		compatible = "qcom,mem-acc-regulator";
 		reg = <0x0194415c 0x4>;
 		reg-names = "acc-sel-l1";
@@ -832,7 +836,7 @@
 		qcom,corner-acc-map = <0x1 0x0>;
 	};
 
-	gfx_vreg_corner: ldo@185f000 {
+	gfx_vreg_corner: ldo@0185f000 {
 		compatible = "qcom,msm8953-gfx-ldo";
 		reg = <0x0185f000 0x30>, <0xa4000 0x1000>;
 		reg-names = "ldo_addr", "efuse_addr";
